fix(components): checkbox getting squashed | bh / mh | #1013

--- a/packages/components/src/components/form/checkbox-wrapper/checkbox-wrapper.scss
+++ b/packages/components/src/components/form/checkbox-wrapper/checkbox-wrapper.scss
@@ -34,8 +34,9 @@
   position: static !important;
   top: 0 !important;
   left: 0 !important;
-  width: p-px-to-rem(24px) !important;
   height: p-px-to-rem(24px) !important;
+  width: p-px-to-rem(24px) !important;
+  min-width: p-px-to-rem(24px) !important;
   display: block !important;
   margin: 0 !important;
   padding: 0 !important;
